# annot-utils

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml  release.yml  test.yml
annot_utils/: _init_.py  agreement.py  cli.py  converter.py  validator.py
examples/: demo.py  test_agreement.py  test_cli.sh  test_conversion.py
tests/: benchmark.py  test_basic.py  test_simple.py
